# luafx

./: CMakeLists.txt  README.md  build_wasm.sh  gen_build_win.bat
3rd/cglm/include/cglm/: cam.h
3rd/lua/src/: loslib.c  luaconf.h
android/: settings.gradle
android/app/: .gitignore  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/luafx/app/: MainActivity.java
android/app/src/main/java/com/luafx/app/utils/: Accelerometer.java  CameraProxy.java  CameraUtil.java  CameraView.java  GLTexture.java  GLView.java  QuadRenderer.java  UIUtil.java
android/app/src/main/java/com/oflite/app/: MainActivity.java
android/app/src/main/java/com/oflite/app/utils/: Accelerometer.java  CameraProxy.java  CameraUtil.java  CameraView.java  GLTexture.java  QuadRenderer.java  UIUtil.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/luafx/: build.gradle
android/luafx/src/main/: AndroidManifest.xml
android/luafx/src/main/cpp/: jni.c
android/luafx/src/main/java/com/luafx/lib/: LuaFX.java
android/luafx/src/main/java/com/oflite/lib/: OFLite.java
android/luafx/src/main/res/values/: strings.xml
assets/: effect.lua
assets/demo/: demo_canvas.lua  demo_cube.lua  demo_depth_texture.lua  demo_instance.lua  demo_text.lua  demo_triangle.lua
assets/game/: game.lua
assets/lua_lib/: Canvas.lua  Font.lua  QuadRenderer.lua  gl.lua  table_ext.lua
include/: luafx.h
src/app/platform/ios/: AppDelegate.m  LaunchScreen.storyboard  Main.m  ViewController.mm  luafx-Info.plist  luafx_app-Info.plist  luafx_camera-Info.plist
src/app/platform/mac/: AppDelegate.m  Info.plist  ViewController.h  ViewController.mm
src/app/platform/web/: Main.c  index.html  index.js
src/app/platform/win/: Main.cpp
src/editor/platform/mac/: AppDelegate.m  Info.plist  Main.m  ViewController.mm
src/editor/platform/win/: Main.cpp
src/luafx/: Context.c  Context.h  Effect.c  Effect.h  ObjectPool.c  ObjectPool.h  Vector.c  Vector.h  gl_include.h  luafx.c
src/luafx/lua_bind/: lua_bind.c  lua_bind.h  lua_bind_cglm.c  lua_bind_cglm.h  lua_bind_cjson.c  lua_bind_cjson.h  lua_bind_context.c  lua_bind_context.h  lua_bind_effect.c  lua_bind_effect.h  lua_bind_gl.c  lua_bind_gl.h  lua_bind_memory.c  lua_bind_memory.h  lua_bind_stbtt.c  lua_bind_stbtt.h
src/luafx/platform/android/: gl3stub.c  gl3stub.h
